third_party/move/move-compiler-v2/tests/reference-safety/v1-borrow-tests/copy_loc_borrowed.no-opt.exp

============ bytecode verification failed ========

Diagnostics:
error: reference safety check failed on bytecode level. This is a known issue, to be fixed later, resulting from differences between safety rules of the v1 and v2 compiler. Try to rewrite your code to workaround this problem.
  ┌─ tests/reference-safety/v1-borrow-tests/copy_loc_borrowed.move:6:9
  │
6 │         x + copy x;
  │         ^^^^^^^^^^
